<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApplica"
    >

    <ImageView
        android:id="@+id/imagenfigura"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/iconfinder_1_avatar_2754574"
        />

    <TextView
        android:id="@+id/lbl_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bienvenido"
        android:drawableStart="@drawable/ic_vector_usuario"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <EditText
        android:id="@+id/txt_clave"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bienvenido"
        android:drawableStart="@drawable/ic_vector_usuario"

        />

    <Spinner
        android:id="@+id/cbx_sede"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/grupo1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais_ecuador"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais_peru"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pais_colombia"
            android:layout_weight="1"
            />


    </RadioGroup>

    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/chekeo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volley"

            />

        <CheckBox
            android:id="@+id/chekeo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Basket"
            />
        <CheckBox
            android:id="@+id/chekeo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/futbol"
            />
        <CheckBox
            android:id="@+id/chekeo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tennis"
            />


    </LinearLayout>

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_marginTop="20dp"
        />
</LinearLayout>