<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/color_turquesa"

 >






    <ImageView
        android:id="@+id/imagen_1"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/iconfinder_usuario_generico"
        />

    <TextView

      style="@style/AppTheme.TextViewStyle"

        android:id="@+id/etiqueta_usuario"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:text="@string/titulo_usuario"
        />

    <EditText

        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txt_usuario_ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Ingreso_usuario"
        android:drawableStart="@drawable/ic_account_box_black_24dp_usuario_ingresar"
        android:drawablePadding="15dp"
        android:paddingStart="2dp"
        />

    <TextView
        style="@style/AppTheme.TextViewStyle"
        android:id="@+id/etiqueta_clave"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloclave"/>

    <EditText
        android:drawableStart="@drawable/ic_vpn_key_black_24dp_clave_usuario"
        android:id="@+id/txt_clave_ingresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawablePadding="15dp"
        android:hint="@string/Ingreso_clave"
        />



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/bt_aceptar"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton_aceptar"
            android:layout_marginEnd="10dp"

            android:background="@color/colorAccent"
            android:textColor="@color/colorBlanco"
            android:drawableStart="@drawable/ic_check_circle_black_24dp_boton_aceptar"


            />
        <Button
            android:id="@+id/bt_cancelar"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boton_cancelar"
            android:background="@color/color_text_View"
            android:textColor="@color/colorBlanco"

            />


    </LinearLayout>









</LinearLayout>